Image stretch fix on recipe page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,3 +135,14 @@ footer {
 .pag-bar {
     margin: 50px 0;
 }
+
+.img-placeholder {
+    width: 300px;
+    height: 300px;
+}
+
+.img-fluid {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+}
